[package]
name = "concision-models"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[features]
default = []

simple = ["dep:simple-model"]

blas = ["simple-model?/blas"]

rand = ["simple-model?/rand"]

rayon = ["simple-model?/rayon"]

serde = ["simple-model?/serde"]

tracing = ["simple-model?/tracing"]

[dependencies]
simple-model = { optional = true, path = "../simple", version = "0.1.0" }