[package]
build = "build.rs"
description = "this crate implements additional models using the concision framework"
name = "concision-models"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib",  "rlib"]
bench = false
doc = true
doctest = true
test = true

# ************* [Examples] *************
[[example]]
name = "simple"
required-features = [
  "approx",
  "rand",
  "tracing",
]

# ************* [Unit Tests] *************
[[test]]
name = "simple"
required-features = [
  "anyhow",
  "approx",
  "rand",
]

[dependencies]
concision-kan = { optional = true, workspace = true }
concision-s4 = { optional = true, workspace = true }
concision-transformer = { optional = true, workspace = true }
# local
concision = { features = ["neural"], workspace = true }
concision-ext = { workspace = true }
# custom
variants = { workspace = true }
# mathematics
approx = { optional = true, workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
# logging
tracing = { optional = true, workspace = true }

[dev-dependencies]
anyhow = { features = ["std"], workspace = true }
lazy_static ={ workspace = true }
tracing-subscriber = { features = ["std"], workspace = true }

# ********* [Features] *********
[features]
default = ["std"]

full = [
  "default",
  "models",
  "rand",
  "serde",
  "tracing"
]

# ************* [FF:Flags] *************
models = [
  "simple",
  "transformer"
]

simple = []

kan = ["dep:concision-kan"]

s4 = ["dep:concision-s4"]

transformer = ["dep:concision-transformer"]

# ************* [FF:Environments] *************
std = [
  "concision/std",
  "concision-ext/std",
  "concision-kan?/std",
  "concision-s4?/std",
  "concision-transformer?/std",
  "ndarray/std",
  "num-traits/std",
  "tracing?/std",
]

# ************* [FF:Dependencies] *************
approx = [
  "dep:approx",
  "concision/approx",
  "concision-ext/approx",
  "concision-kan?/approx",
  "concision-s4?/approx",
  "concision-transformer?/approx",
  "ndarray/approx",
]

blas = [
  "concision/blas",
  "concision-ext/blas",
  "concision-kan?/blas",
  "concision-s4?/blas",
  "concision-transformer?/blas",
  "ndarray/blas",
]

rand = [
  "concision/rand",
  "concision-ext/rand",
  "concision-kan?/rand",
  "concision-s4?/rand",
  "concision-transformer?/rand",
]

rayon = [
  "concision/rayon",
  "concision-ext/rayon",
  "concision-kan?/rayon",
  "concision-s4?/rayon",
  "concision-transformer?/rayon",
  "ndarray/rayon",
]

serde = [
  "concision/serde",
  "concision-ext/rng",
  "concision-kan?/serde",
  "concision-s4?/serde",
  "concision-transformer?/serde",
  "ndarray/serde",
]

tracing = [
  "dep:tracing",
  "concision/tracing",
  "concision-ext/tracing",
  "concision-kan?/tracing",
  "concision-s4?/tracing",
  "concision-transformer?/tracing",
]

# ********* [Metadata] *********
[package.metadata.docs.rs]
all-features = false
doc-scrape-examples = true
features = ["full"]
rustc-args = ["--cfg", "docsrs"]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"