[package]
name = "simple-model"
version = "0.1.0"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
name = "simple"

[features]
default = ["concision/neural", "concision/std"]

full = ["rand", "serde", "tracing"]

# ********* [FF] Dependencies *********
blas = ["concision-core/blas", "concision-neural/blas", "ndarray/blas"]

rand = ["concision-core/rand", "concision-neural/rand", "ndarray/rand"]

rayon = ["concision-core/rayon", "concision-neural/rayon", "ndarray/rayon"]

serde = ["concision-core/serde", "concision-neural/serde"]

tracing = ["concision-core/tracing", "concision-neural/tracing"]



[dependencies]
concision-core = { features = ["std"], workspace = true }
concision-neural = { workspace = true }

ndarray = { features = ["std"], workspace = true }
num-traits = { workspace = true  }
