[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)", "Scattered-Systems <support@scsys.io> (https://github.com/scattered-systems)"]
categories = ["science"]
description = "Concision is a toolkit for designing machine-learning models in Rust."
edition = "2024"
homepage = "https://github.com/FL03/concision/wiki"
keywords = ["data-science", "machine-learning", "scsys", "toolkit"]
license = "Apache-2.0"
name = "simple-model"
readme = "README.md"
repository = "https://github.com/FL03/concision"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "simple"

[features]
default = ["concision-core/std", "concision-neural/default"]

full = ["rand", "serde", "tracing"]

# ********* [FF] Dependencies *********
blas = ["concision-core/blas", "concision-neural/blas", "ndarray/blas"]

rand = ["concision-core/rand", "concision-neural/rand"]

rayon = ["concision-core/rayon", "concision-neural/rayon", "ndarray/rayon"]

serde = ["concision-core/serde", "concision-neural/serde"]

tracing = ["concision-core/tracing", "concision-neural/tracing"]



[dependencies]
concision-core = { features = ["std"], path = "../../core" }
concision-neural = { path = "../../neural" }

ndarray = { features = ["std"], version = "0.16" }
num-traits = { version = "0.2" }
