[package]
build = "build.rs"
description = "Synaptic Neural Networks for the Concision Machine Learning Framework"
name = "concision-snn"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = ["--cfg", "docsrs"]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"
[lib]
crate-type = [
    "cdylib",
    "rlib",
]
bench = false
doc = true
doctest = true
test = true

[dependencies]
concision = { features = ["neural"], workspace = true }
# mathematics
approx = { optional = true, workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
# logging
tracing = { optional = true, workspace = true }

[dev-dependencies]
anyhow = { features = ["std"], workspace = true }

[features]
default = [
    "std",
]

full = [
    "default",
    "rand",
    "serde",
    "tracing"
]

# ************* [FF:Environments] *************
std = [
    "concision/std",
    "ndarray/std",
    "num-traits/std",
    "tracing/std",
]

wasi = [
    "concision/wasi",
]

wasm = [
    "concision/wasm",
]

# ************* [FF:Dependencies] *************
approx = [
    "dep:approx",
    "concision/approx",
    "ndarray/approx",
]

blas = [
    "concision/blas",
    "ndarray/blas"
]

rand = [
    "concision/rand",
]

rayon = [
    "concision/rayon",
    "ndarray/rayon"
]

serde = [
    "concision/serde",
]

tracing = [
    "dep:tracing",
    "concision/tracing",
]
