[package]
authors.workspace = true
build = "build.rs"
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "concision-transformers"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "std",
]

full = [
    "default",
    "approx",
    "rand",
    "serde",
]

# ********* [FF] Dependencies *********

alloc = [
    "concision-core/alloc",
    "concision-linear/alloc",
    "serde?/alloc",
]

approx = [
    "dep:approx",
    "concision-core/approx",
    "concision-linear/approx",
    "ndarray/approx-0_5",
]

blas = [
    "concision-core/blas",
    "concision-linear/blas",
    "ndarray/blas",
]

rand = [
    "concision-core/rand",
    "concision-linear/rand",
    "num/rand"
]

serde = [
    "serde-1",
    "concision-core/serde",
    "concision-linear/serde",
    "ndarray/serde-1",
    "num/serde"
]

serde-1 = [
    "dep:serde",
]

tracing = [
    "dep:tracing",
    "concision-core/tracing",
    "concision-linear/tracing",
]

# ********* [FF] Environments *********
std = [
    "concision-core/std",
    "concision-linear/std",
    "ndarray/std",
    "num/std",
    "serde?/std",
    "strum/std",
]

wasm = [
    "concision-core/wasm",
    "concision-linear/wasm",
]

wasi = [    
    "concision-core/wasi",
    "concision-linear/wasi",
]

[lib]
bench = false
crate-type = ["lib"]
doctest = true
test = true

[[test]]
name = "attention"
required-features = ["approx", "rand"]

[build-dependencies]

[dependencies]
ndarray.workspace = true
num.workspace = true
paste.workspace = true
smart-default.workspace = true
strum.workspace = true

[dependencies.approx]
optional = true
version = "0.5"

[dependencies.concision-core]
default-features = false
path = "../../core"
version = "0.1.14"

[dependencies.concision-linear]
default-features = false
path = "../linear"
version = "0.1.14"

[dependencies.serde]
default-features = false
features = ["derive"]
optional = true
version = "1"

[dependencies.tracing]
optional = true
version = "0.1"

[dev-dependencies]
approx.workspace = true
lazy_static.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
